Quitar funciones que ahora no se usan

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -11,8 +11,7 @@
             app:showAsAction="always"
             app:actionViewClass="android.widget.SearchView" />
 
-
-        <item android:id="@+id/nav_ajustes"
+      <!--  <item android:id="@+id/nav_ajustes"
             android:title="Ajustes"
-            android:icon="@drawable/ajustes"/>
+            android:icon="@drawable/ajustes"/>-->
 </menu>
