--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -28,8 +28,8 @@
         android:title="Buscador"
         android:icon="@drawable/search_icon"/>-->
 
-    <item android:id="@+id/nav_mas"
+   <!-- <item android:id="@+id/nav_mas"
         android:title="Más"
-        android:icon="@drawable/icon_mas"/>
+        android:icon="@drawable/icon_mas"/>-->
 
 </menu>
