--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -106,12 +106,14 @@
                 android:id="@+id/boton_flotante"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
                 android:layout_marginStart="334dp"
                 android:layout_marginLeft="334dp"
-                android:layout_marginEnd="15dp"
                 android:layout_marginTop="30dp"
+                android:layout_marginEnd="21dp"
                 android:layout_marginRight="15dp"
-                android:layout_marginBottom="395dp"
                 app:srcCompat="@mipmap/ic_editar" />
         </RelativeLayout>
     </ScrollView>
