--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -9,10 +9,10 @@
     <item android:id="@+id/nav_notificaciones"
         android:title=""
         android:icon="@drawable/search_icon"/>
-    <item
+   <!-- <item
         android:id="@+id/icon_nav"
         android:icon="@drawable/like_color"
-        android:title="" />
+        android:title="" />-->
     <item
         android:id="@+id/nav_publicacion"
         android:icon="@drawable/subir_icon"
@@ -22,6 +22,10 @@
         android:title="Ajustes"
         android:icon="@drawable/ajustes"/> -->
 
+    <item android:id="@+id/nav_mas"
+        android:title=""
+        android:icon="@drawable/notificaciones"/>
+
     <item
         android:id="@+id/nav_perfil"
         android:icon="@drawable/perfil_icon"
@@ -30,9 +34,4 @@
     <!--<item android:id="@+id/nav_buscador"
         android:title="Buscador"
         android:icon="@drawable/search_icon"/>-->
-
-   <!-- <item android:id="@+id/nav_mas"
-        android:title="Más"
-        android:icon="@drawable/icon_mas"/>-->
-
 </menu>
