--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -76,13 +76,14 @@
                         android:layout_marginLeft="5dp"
                         android:fontFamily="@font/font_style_regular"
                         android:hint="Pon aquí algo sobre ti " />
+
                 </LinearLayout>
             </LinearLayout>
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerView_posts"
                 android:layout_width="match_parent"
-                android:layout_height="549dp"
+                android:layout_height="400dp"
                 android:layout_below="@+id/linearLayout"
                 android:layout_marginTop="70dp" />
 
@@ -104,17 +105,18 @@
 
             <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/boton_flotante"
-                android:layout_width="wrap_content"
+                android:layout_width="474dp"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
-                android:layout_marginStart="334dp"
+                android:layout_gravity="bottom|end"
                 android:layout_marginLeft="334dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="21dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="15dp"
                 android:layout_marginRight="15dp"
+                android:layout_marginBottom="70dp"
                 app:srcCompat="@mipmap/ic_editar" />
+
         </RelativeLayout>
     </ScrollView>
 
